# runway_technical

./: Dockerfile  README.md  config.yaml  pyproject.toml  requirements.txt  reviews.csv
runway_technical/: csv_reader.py  main.py  reviews.py
runway_technical/templates/: index.html
