[tool.poetry]
name = "runway-technical"
version = "0.1.0"
description = ""
authors = ["kuhmil <kuhmil06@gmail.com>"]
readme = "README.md"
packages = [{include = "runway_technical"}]

[tool.poetry.dependencies]
python = "3.8.14"
pandas = "^1.5.0"
requests-html = "^0.10.0"
requests = "^2.28.1"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
gunicorn = "^20.1.0"
numpy = "^1.23.3"
pydantic = "^1.10.2"
feedparser = "^6.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
